Fix anchor overlapping with header

--- a/source/_static/theme.css
+++ b/source/_static/theme.css
@@ -241,3 +241,8 @@ header .header__links li a {
 		width: auto;
 	}
 }
+
+.section {
+    padding-top: 100px;
+    margin-top: -100px;
+}
